--- a/Servlet App/src/main/webapp/index.html
+++ b/Servlet App/src/main/webapp/index.html
@@ -1,65 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Number Addition Form</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 50px auto;
-      max-width: 400px;
-      text-align: center;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Forms Example</title>
+<style>
+body {
+	font-family: 'Arial', sans-serif;
+	background-color: #f4f4f9;
+	color: #333;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+}
 
-    h1 {
-      margin-bottom: 20px;
-    }
+.container {
+	background-color: #fff;
+	padding: 40px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	border-radius: 10px;
+	max-width: 400px;
+	width: 100%;
+	text-align: center;
+}
 
-    label {
-      display: block;
-      margin-bottom: 5px;
-    }
+h1 {
+	font-size: 24px;
+	margin-bottom: 20px;
+	color: #333;
+}
 
-    input[type="number"] {
-      width: 100%;
-      padding: 8px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
+form {
+	margin-bottom: 20px;
+}
 
-    button {
-      background-color: #4CAF50;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
+label {
+	display: block;
+	margin-bottom: 8px;
+	font-weight: bold;
+	color: #555;
+}
 
-    button:hover {
-      background-color: #3e8e41;
-    }
+input[type="number"], input[type="text"] {
+	width: 100%;
+	padding: 10px;
+	margin-bottom: 15px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	box-sizing: border-box;
+	font-size: 16px;
+}
 
-    #result {
-      font-weight: bold;
-      margin-top: 20px;
-    }
-  </style>
+button {
+	background-color: #28a745;
+	color: white;
+	padding: 10px 20px;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	font-size: 16px;
+	transition: background-color 0.3s;
+}
+
+button:hover {
+	background-color: #218838;
+}
+
+#result {
+	font-weight: bold;
+	margin-top: 20px;
+	color: #333;
+}
+</style>
 </head>
 <body>
-  <h1>Add Two Numbers</h1>
-  <form action="add" method="post">
-    <label for="num1">First Number:</label>
-    <input type="number" id="num1" name="num1" placeholder="Enter first number" required>
-    <br>
-    <label for="num2">Second Number:</label>
-    <input type="number" id="num2" name="num2" placeholder="Enter second number" required>
-    <br>
-    <button type="submit">Add</button>
-  </form>
+	<div class="container">
+		<h1>Add Two Numbers</h1>
+		<form action="add" method="get">
+			<label for="num1">First Number:</label> <input type="number"
+				id="num1" name="num1" placeholder="Enter first number" required>
+			<label for="num2">Second Number:</label> <input type="number"
+				id="num2" name="num2" placeholder="Enter second number" required>
+			<button type="submit">Add</button>
+		</form>
 
-  <p id="result"></p>
+		<p id="result"></p>
 
+		<h1>Enter Name and Age</h1>
+		<form action="FormHandler.jsp" method="get">
+			<label for="name">Name:</label> <input type="text" id="name"
+				name="name" placeholder="Enter your name" required> <label
+				for="age">Age:</label> <input type="number" id="age" name="age"
+				placeholder="Enter your age" required>
+			<button type="submit">Submit</button>
+		</form>
+	</div>
 </body>
 </html>
